# rust-clean-architecture

./: .env  Cargo.toml
migrations/: 20250318051101_create_table_users.up.sql  20250318051108_create_table_contacts.down.sql  20250318051108_create_table_contacts.up.sql  20250318051112_create_table_addresses.down.sql  20250318051112_create_table_addresses.up.sql
src/config/: sqlx.rs
